add grpc validator and run migrate in code
