# docs/swagger/service_simple_bank.swagger.json
@@ -1,8 +1,13 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "service_simple_bank.proto",
-    "version": "version not set"
+    "title": "Simple Bank API",
+    "version": "1.1",
+    "contact": {
+      "name": "GGjahoon",
+      "url": "https://github.com/GGjahoon/MySimpleBank",
+      "email": "Zx_jahoon@outlook.com"
+    }
   },
   "tags": [
     {
@@ -18,6 +23,8 @@
   "paths": {
     "/v1/create_user": {
       "post": {
+        "summary": "Create New User",
+        "description": "Use this API to create a new user",
         "operationId": "SimpleBank_CreateUser",
         "responses": {
           "200": {
@@ -50,6 +57,8 @@
     },
     "/v1/login_user": {
       "post": {
+        "summary": "Login User",
+        "description": "Use this API to login user and get access token \u0026 refresh token",
         "operationId": "SimpleBank_LoginUser",
         "responses": {
           "200": {
