# gapi/rpc_login_user.go
@@ -6,6 +6,8 @@ import (
 	db "github.com/GGjahoon/MySimpleBank/db/sqlc"
 	"github.com/GGjahoon/MySimpleBank/pb"
 	"github.com/GGjahoon/MySimpleBank/util"
+	"github.com/GGjahoon/MySimpleBank/val"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 	"google.golang.org/protobuf/types/known/timestamppb"
@@ -14,6 +16,10 @@ import (
 func (server *Server) LoginUser(
 	ctx context.Context, req *pb.LoginUserRequest,
 ) (rsp *pb.LoginUserResponse, err error) {
+	violations := validateLoginUserRequest(req)
+	if violations != nil {
+		return nil, invalidArgumentError(violations)
+	}
 	user, err := server.store.GetUser(ctx, req.GetUsername())
 	if err != nil {
 		if err == sql.ErrNoRows {
@@ -57,4 +63,13 @@ func (server *Server) LoginUser(
 		RefreshTokenExpireAt: timestamppb.New(refreshPayload.ExpireAt),
 	}
 	return rsp, nil
+}
+func validateLoginUserRequest(req *pb.LoginUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := val.ValidateUsername(req.GetUsername()); err != nil {
+		violations = append(violations, fieldViolations("username", err))
+	}
+	if err := val.ValidatePassword(req.GetPassword()); err != nil {
+		violations = append(violations, fieldViolations("password", err))
+	}
+	return violations
 }
